Use virtual threads for HTTP server when available